--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="msapplication-config" content="assets/images/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
 
-    <title>HelpIT</title>
+    <title>HelpIT - Login</title>
 
     <!-- Documents -->
     <link rel="stylesheet" href="style.css">
