--- a/index.html
+++ b/index.html
@@ -2,17 +2,14 @@
 <html lang="de" translate="no">
 
 <head>
+    <title>HelpIT - Login</title>
+
     <!-- Meta -->
     <meta charset="UTF-8">
-    <meta name="keywords" content="HelpIT, Informatik, Werkzeuge">
-    <meta name="description" content="Website für IT-Werkzeuge">
     <meta name="author" content="HelpIT">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-config" content="assets/images/favicon/browserconfig.xml">
     <meta name="theme-color" content="#ffffff">
-
-    <title>HelpIT - Login</title>
 
     <!-- Documents -->
     <link rel="stylesheet" href="style.css">
@@ -22,19 +19,12 @@
     <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="assets/images/favicon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon/favicon-16x16.png">
-    <link rel="manifest" href="assets/images/favicon/site.webmanifest">
     <link rel="mask-icon" href="assets/images/favicon/safari-pinned-tab.svg" color="#7b7b7b">
     <link rel="shortcut icon" href="assets/images/favicon/favicon.ico">
-    <link href="https://fonts.googleapis.com/css2?family=Anton&family=Bebas+Neue&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+
+    <!-- Scripts -->
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-    <link rel="manifest" href="../../functions/manifest.json">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  
 </head>
 
 <body>
@@ -79,8 +69,5 @@
         </form>
         <p class="info-text">Anmeldeinformationen sind nur dem Team "HelpIT"
             bekannt</p>
-
-
 </body>
-
 </html>
