--- a/index.html
+++ b/index.html
@@ -1,73 +1,61 @@
 <!DOCTYPE html>
-<html lang="de" translate="no">
-
+<html lang="de">
 <head>
-    <title>HelpIT - Login</title>
-
-    <!-- Meta -->
     <meta charset="UTF-8">
-    <meta name="author" content="HelpIT">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="theme-color" content="#ffffff">
-
-    <!-- Documents -->
-    <link rel="stylesheet" href="style.css">
-    <script type="module" src="index.js"></script>
-
-    <!-- Icons -->
-    <link rel="apple-touch-icon" sizes="120x120" href="assets/images/favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="assets/images/logo/png/32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="assets/images/logo/png/favicon-16x16.png">
-    <link rel="mask-icon" href="assets/images/logo/png/safari-pinned-tab.svg" color="#7b7b7b">
-    <link rel="shortcut icon" href="assets/images/logo/win/icon.ico">
-
-    <!-- Scripts -->
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/9.0.0/firebase-storage.js"></script>
+    <title>Login</title>
+    <style>
+        .login-container {
+            max-width: 400px;
+            margin: 100px auto;
+            padding: 20px;
+            border: 1px solid #ccc;
+            border-radius: 5px;
+        }
+        .form-group {
+            margin-bottom: 15px;
+        }
+        input {
+            width: 100%;
+            padding: 8px;
+            margin-top: 5px;
+        }
+        button {
+            width: 100%;
+            padding: 10px;
+            background-color: #4CAF50;
+            color: white;
+            border: none;
+            border-radius: 3px;
+            cursor: pointer;
+        }
+        .error-message {
+            color: red;
+            display: none;
+            margin-bottom: 10px;
+        }
+    </style>
 </head>
-
 <body>
-    <div class="container">
-        
-        <div class="logo">
-            <div>
-                <svg version="1.0" xmlns="http://www.w3.org/2000/svg" width="60pt" height="60pt"
-                    viewBox="0 0 150.000000 191.000000" preserveAspectRatio="xMidYMid meet">
-                    <g transform="translate(0.000000,191.000000) scale(0.100000,-0.100000)" stroke="none"
-                        fill="#fff">
-                        <path
-                            d="M810 1866 c-124 -46 -300 -154 -358 -220 -26 -30 -44 -39 -99 -52 -38 -8 -77 -18 -88 -21 -25 -7 -130 -108 -155 -148 -25 -40 -111 -237 -106 -243 2 -2 27 8 55 22 47 25 81 33 81 20 0 -3 -18 -34 -39 -70 -49 -81 -73 -175 -79 -311 -4 -104 2 -122 27 -80 32 52 86 117 98 117 9 0 13 -16 13 -54 0 -109 39 -261 80 -314 l18 -23 6 53 c3 29 11 105 16 168 24 252 74 403 164 489 44 43 47 64 9 55 -58 -12 -151 -65 -211 -120 -35 -31 -66 -54 -69 -50 -14 14 85 181 153 255 20 23 34 44 31 47 -3 4 -40 -1 -82 -11 -42 -9 -79 -14 -82 -11 -3 3 6 23 21 44 42 61 83 78 234 96 184 21 232 50 232 141 0 19 -3 35 -6 35 -3 0 -28 -12 -54 -27 -102 -58 -58 6 57 82 62 42 89 46 78 13 -14 -39 -17 -168 -6 -182 6 -8 38 -19 71 -25 43 -9 73 -23 110 -52 49 -38 65 -69 36 -69 -8 0 -48 14 -89 30 -92 37 -154 39 -215 7 l-43 -23 23 -21 c59 -53 120 -63 263 -43 78 12 115 7 293 -42 122 -33 123 -34 135 -111 5 -32 1 -43 -24 -72 -42 -48 -94 -63 -239 -69 -143 -5 -209 -24 -285 -82 -49 -38 -61 -39 -50 -5 16 51 98 134 204 208 2 2 2 6 -1 9 -11 10 -130 -26 -189 -57 -32 -17 -87 -61 -122 -98 -116 -120 -168 -262 -168 -461 0 -127 15 -198 61 -297 44 -95 51 -86 65 72 16 169 59 325 91 325 7 0 16 -16 19 -37 41 -245 212 -497 409 -605 38 -21 72 -38 77 -38 12 0 1 24 -63 136 -79 136 -164 384 -132 384 3 0 36 -27 72 -60 51 -46 86 -67 146 -90 43 -17 81 -29 83 -26 2 2 -15 28 -39 57 -134 165 -198 312 -198 456 0 37 -4 63 -10 63 -22 0 -112 -52 -151 -87 -22 -20 -42 -33 -46 -30 -13 14 33 90 79 132 61 55 125 76 253 85 92 5 105 9 148 38 42 29 167 166 167 183 0 18 -47 62 -88 83 -26 13 -98 38 -161 55 -157 44 -165 49 -188 118 -21 63 -11 57 -170 103 -54 15 -73 25 -73 38 0 9 14 64 30 122 17 58 30 106 30 107 0 6 -27 1 -60 -11z" />
-                        <path
-                            d="M944 1736 c-67 -44 -73 -62 -29 -80 52 -22 73 -11 101 52 13 30 24 56 24 58 0 15 -53 -3 -96 -30z" />
-                    </g>
-                </svg>
+    <div class="login-container">
+        <h2>Login</h2>
+        <div class="error-message" id="errorMessage"></div>
+        <form id="loginForm" onsubmit="loginUser(event)">
+            <div class="form-group">
+                <label for="email">E-Mail:</label>
+                <input type="email" id="email" required>
             </div>
-        </div>
-
-        <div class="form__group field">
-            <input type="text" class="form__field" id="usernameInput" placeholder="Username" required
-                style="font-size: 14px; font-weight: 500;" autocomplete="off" data-bwignore="off" data-form-type="other"
-                data-lpignore="true" data-1p-ignore >
-        </div>
-        <div class="form__group field">
-            <input type="password" class="form__field" id="passwordInput" placeholder="Password" required
-                style="font-size: 14px; font-weight: 500;" autocomplete="off" data-bwignore="off" data-form-type="other"
-                data-lpignore="true" data-1p-ignore>
-        </div>
-
-
-        <div class="form__group field" >
-            <a href="https://www.google.com/search?q=Ged%C3%A4chtnisst%C3%B6rung" target="_blank" class="forgot-password-link" style="font-size: 13px; color: #fff; text-decoration: none; font-weight: 500; margin-left: 25px;">
-                Passwort vergessen?
-            </a>
-        </div>
-
-        <form>
-            <button class="submit-button" type="button">Anmelden</button>
-            <span id="timer"></span>
+            <div class="form-group">
+                <label for="password">Passwort:</label>
+                <input type="password" id="password" required>
+            </div>
+            <button type="submit">Einloggen</button>
         </form>
-        <p class="info-text">Anmeldeinformationen sind nur dem Team "HelpIT"
-            bekannt</p>
+    </div>
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app-compat.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth-compat.js"></script>
+    <script src="firebase/firebaseConfig.js"></script>
+    <script src="script.js"></script>
 </body>
-</html>
+</html> 
