--- a/main/main.html
+++ b/main/main.html
@@ -9,6 +9,8 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate, proxy-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="icon" type="image/png" sizes="32x32" href="../assets/images/logo/png/32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../assets/images/logo/png/16x16.png">
 </head>
 <body>
     <header>
