--- a/src/changelogs/index.html
+++ b/src/changelogs/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FixIT - Changelog</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="changelog.css">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <link rel="icon" type="image/x-icon" href="../../assets/images/favicon/changelogs.ico">
     <link rel="stylesheet" href="style.css">
@@ -31,6 +30,8 @@
    
     
 </body>
-<script src="../token.js"></script>
-<script src="script.js"></script>
+
+<!-- KEIN token.js laden! -->
+<script type="module" src="script.js"></script>
+
 </html> 
