--- a/src/changelogs/index.html
+++ b/src/changelogs/index.html
@@ -33,5 +33,6 @@
 
 <!-- KEIN token.js laden! -->
 <script type="module" src="script.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 
 </html> 
