--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FixIT - Admin Login</title>
+    <title>HelpIT - Admin Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="assets/images/favicon/login.ico">
+    <link rel="icon" type="image/x-icon" href="assets/images/favicon/logo_32x32.ico">
     <!-- Firebase SDKs -->
     <script type="module" src="https://www.gstatic.com/firebasejs/11.5.0/firebase-app.js"></script>
     <script type="module" src="https://www.gstatic.com/firebasejs/11.5.0/firebase-auth.js"></script>
@@ -18,8 +18,7 @@
     <div class="login-container">
         <div class="login-box">
             <div class="logo-container">
-<img src="assets/images/logo.svg"></img>
-                <span>FixIT</span>
+<img src="assets/images/logo.png"></img>
             </div>
             <h1>Admin Login</h1>
             <p class="login-subtitle">Bitte melden Sie sich mit Ihren Administratordaten an</p>
