--- a/src/changelogs/index.html
+++ b/src/changelogs/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>FixIT - Changelog</title>
+    <title>FixIT - Changelogs</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon/changelogs.ico">
+    <link rel="icon" type="image/x-icon" href="../../assets/images/favicon/logo_32x32.ico">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="changelog-container">
         <div class="header-actions">
-            <a href="../homepage/index.html" class="nav-button">
+            <a href="../../src/homepage/index.html" class="nav-button">
                 <svg class="nav-icon" viewBox="0 0 24 24">
                     <path d="M20 11H7.83l5.59-5.59L12 4l-8 8 8 8 1.41-1.41L7.83 13H20v-2z"/>
                 </svg>
